clusters/my-cluster/apps/cabot-cup/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cabot-cup
  namespace: my-cluster
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: cabot-cup
  template:
    metadata:
      labels:
        app: cabot-cup
    spec:
      containers:
      - name: cabot-cup
        image: ghcr.io/dgunzy/ejs-cabot-app:latest
        ports:
          - name: web
            containerPort: 3000    
        resources:
          limits:
            memory: "556Mi"
            cpu: "500m"
          requests:
            memory: "556Mi"
            cpu: "250m"
