clusters/my-cluster/apps/cabot-cup/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cabot-cup-service 
  namespace: my-cluster
spec: 
  type: ClusterIP
  ports:
    - port: 7070
      targetPort: web 
  selector:
    app: cabot-cup
