clusters/my-cluster/apps/cabot-cup/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cabot-cup 
  namespace: my-cluster
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cabotcup.ca
    secretName: cabotcup-tls
  rules:
    - host: cabotcup.ca
      http:
        paths:
          - pathType: Prefix
            path: / 
            backend:
              service:
                name: cabot-cup-service
                port:
                  number: 7070
